<resources>
    <string name="app_name">Projet_TD2_Menu</string>
    <string name="mescourses">MesCourses</string>
    <string name="profil">Profil</string>
    <string name="recettes">Recettes</string>
    <string name="planning">Planning</string>
    <string name="entrees">Entrées</string>
    <string name="plats">Plats</string>
    <string name="desserts">Desserts</string>
    <string name="filtres">Filtres</string>
    <string name="sain">Sain</string>
    <string name="difficult">Difficulté</string>
    <string name="favoris">Favoris</string>
    <string name="mes_cr_ations">Mes Créations</string>
    <string name="economique">Economique</string>
    <string name="ajouter_une_photo">Ajouter une photo</string>
    <string name="parcourir_les_fichiers_locaux">Parcourir les fichiers locaux</string>
    <string name="prendre_une_photo">Prendre une photo</string>
    <string name="prix">Prix</string>
    <string name="valider">Valider</string>
    <string name="annuler">Annuler</string>
    
    <!-- Profil -->
    <string name="item_profil_name">Nom du profil</string>

    <!-- Recette -->
    <string name="item_recipe_name">Nom de la recette</string>
    <string name="item_recipe_description">Description de la recette</string>
    <string name="item_recipe_ingredient">Ingrédients</string>

    <!-- Ingredients -->
    <string name="item_ingredient_name">Nom de l\'ingrédient</string>

    <!-- Navigation -->
    <string name="item_navigation_planing">Planing</string>
    <string name="item_navigation_recipe">Recettes</string>
    <string name="item_navigation_course">MesCourses</string>
    <string name="item_navigation_profil">Profil</string>

    <!-- Status abonnement -->
    <string name="status_sub">S\'abonner</string>
    <string name="status_sub_subscriber">Abonnés</string>
    <string name="status_sub_subscription">Abonnements</string>
    
    <!-- Planing -->
    <string name="planing_breakfast">Petit déjeuner</string>
    <string name="planing_lunch">Déjeuner</string>
    <string name="planing_snack">Goûter</string>
    <string name="planing_dinner">Dinner</string>

    <!-- Filtre -->
    <string name="filter_title">Filtres</string>
    <string name="filter_eco">Economie</string>
    <string name="filter_healthy">Sain</string>
    <string name="filter_difficulty">Difficulté</string>
    <string name="filter_fav">Favori</string>
    <string name="filter_creation">Création</string>
    <string name="filter_starter">Entrées</string>
    <string name="filter_main">Plats</string>
    <string name="filter_dessert">Desserts</string>

    <!-- Boutons -->
    <string name="button_save">Sauvegarder</string>
    <string name="button_del">Supprimer</string>
    <string name="button_validate">Valider</string>
    <string name="button_cancel">Annuler</string>
</resources>