<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListRecipeActivity">

    <LinearLayout
        android:paddingTop="20sp"
        android:id="@+id/filters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/starters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entrees" />

        <Button
            android:id="@+id/dishes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plats" />

        <Button
            android:id="@+id/deserts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desserts" />

    </LinearLayout>

    <Button
        android:id="@+id/filter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/filters"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/filtres" />

    <ListView
        android:id="@+id/list_recipes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/filters"
        app:layout_constraintBottom_toTopOf="@id/navigation_bar"/>

    <LinearLayout
        android:id="@+id/navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/planning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/planning"
            android:textSize="12sp" />

        <Button
            android:id="@+id/recettes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recettes"
            android:textSize="12sp" />

        <Button
            android:id="@+id/mes_courses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mescourses"
            android:textSize="12sp" />

        <Button
            android:id="@+id/profil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profil"
            android:textSize="12sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>