<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/navigation_bar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal">

    <Button
        android:id="@+id/planning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_navigation_planing"
        android:textSize="12sp" />

    <Button
        android:id="@+id/recettes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_navigation_recipe"
        android:textSize="12sp" />

    <Button
        android:id="@+id/mes_courses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_navigation_course"
        android:textSize="12sp" />

    <Button
        android:id="@+id/profil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_navigation_profil"
        android:textSize="12sp" />
</LinearLayout>