<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PhotoLoadActivity">

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="30dp"
        android:maxHeight="30dp"
        android:adjustViewBounds="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        app:srcCompat="@drawable/back" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ajouter_une_photo"
        android:textSize="30sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/back_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="70dp"
        android:maxHeight="70dp"
        android:adjustViewBounds="true"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="50dp"
        tools:srcCompat="@drawable/file"/>

    <TextView
        android:id="@+id/desc_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/file"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/parcourir_les_fichiers_locaux"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"/>

    <ImageView
        android:id="@+id/camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="70dp"
        android:maxHeight="70dp"
        android:adjustViewBounds="true"
        app:layout_constraintTop_toBottomOf="@id/desc_file"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:srcCompat="@drawable/camera"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/desc_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/camera"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/prendre_une_photo"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/button_valider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/desc_camera"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/valider"
        android:layout_marginTop="50dp"/>

    <LinearLayout
        android:id="@+id/navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/planning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/planning"
            android:textSize="12sp" />

        <Button
            android:id="@+id/recettes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recettes"
            android:textSize="12sp" />

        <Button
            android:id="@+id/mes_courses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mescourses"
            android:textSize="12sp" />

        <Button
            android:id="@+id/profil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profil"
            android:textSize="12sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>