<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Mercredi 5 Janvier"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"/>

    <ImageView
        android:id="@+id/calendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="30dp"
        android:src="@android:drawable/ic_menu_my_calendar"/>

    <ListView
        android:id="@+id/list_meals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/navigation_bar"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <LinearLayout
        android:id="@+id/navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/planning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/planning"
            android:textSize="12sp" />

        <Button
            android:id="@+id/recettes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recettes"
            android:textSize="12sp" />

        <Button
            android:id="@+id/mes_courses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mescourses"
            android:textSize="12sp" />

        <Button
            android:id="@+id/profil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profil"
            android:textSize="12sp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>