<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfilActivity">


    <fragment
        android:id="@+id/navigation_bar"
        android:name="edu.polytech.projet_td2_menu.fragments.NavigationBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/profilPicture"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/avatar" />


    <TextView
        android:id="@+id/sub"
        android:layout_width="70dp"
        android:layout_height="20dp"
        android:layout_marginLeft="10dp"
        android:text="@string/status_sub_subscriber"
        android:textAlignment="center"
        android:layout_marginTop="45dp"
        app:layout_constraintStart_toEndOf="@+id/creations"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sub_nb"
        android:layout_width="70dp"
        android:layout_height="20dp"
        android:layout_marginLeft="10dp"
        android:text="15"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/creations"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mySub"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_marginLeft="10dp"
        android:text="@string/status_sub_subscription"
        android:textAlignment="center"
        android:layout_marginTop="45dp"
        app:layout_constraintStart_toEndOf="@+id/sub"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mySub_nb"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_marginLeft="10dp"
        android:text="10"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/sub"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/creations"
        android:layout_width="70dp"
        android:layout_height="20dp"
        android:layout_marginLeft="10dp"
        android:text="@string/filter_creation"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/profilPicture"
        android:layout_marginTop="45dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/creations_nb"
        android:layout_width="70dp"
        android:layout_height="20dp"
        android:layout_marginLeft="10dp"
        android:text="2"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/profilPicture"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/listRecipeProfile"
        android:layout_width="410dp"
        android:layout_height="430dp"
        android:layout_marginTop="180dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></LinearLayout>

    <Button
        android:id="@+id/favorite_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_fav"
        android:layout_marginLeft="15dp"
        app:layout_constraintBottom_toTopOf="@+id/listRecipeProfile"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/creation_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_creation"
        android:layout_marginLeft="10dp"
        app:layout_constraintBottom_toTopOf="@+id/listRecipeProfile"
        app:layout_constraintStart_toEndOf="@+id/favorite_menu" />

    <Button
        android:id="@+id/tmp_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TMP"
        app:layout_constraintBottom_toTopOf="@+id/listRecipeProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profilPicture"
        app:layout_constraintTop_toBottomOf="@+id/sub" />

</androidx.constraintlayout.widget.ConstraintLayout>